Add pdf download

--- a/src/main/resources/templates/receipt.html
+++ b/src/main/resources/templates/receipt.html
@@ -35,7 +35,7 @@
             <h1>{establishmentName}</h1>
           </div>
           <div class="section">
-            <strong>Purchase Time:</strong> {date}<br>
+            <strong>Purchase Time:</strong> {date}
           </div>
           <div class="section">
             <strong>Transaction ID:</strong> {transactionId}
